# todo_bot

./: .env.dist  .gitignore  app.py  bot.py  docker-compose.yml  loader.py  pyproject.toml  requirements.txt
alembic/: env.py
core/: __init__.py  config.py  loader.py
db_api/: session.py
db_api/crud/: base_crud.py  tasks_crud.py  users_crud.py
db_api/models/: base.py  tasks.py  users.py
db_api/schemas/: scheduler_schemas.py  tasks_chemas.py  users_schemas.py
tg_bot/: __init__.py  settings.py
tg_bot/db_api/: mysql.py
tg_bot/dependecies/: formatters.py  geolocation.py  scheduler.py
tg_bot/filters/: __init__.py  admin.py  register_filters.py
tg_bot/handlers/: __init__.py  add_task.py  admin.py  echo.py  notify_handlers.py  register_all_handlers.py  start.py  tasks_control.py
tg_bot/handlers/users/: __init__.py  adding_notify.py  adding_tasks.py  admin.py  cancel_and_back.py  echo.py  edit_task.py  my_tasks.py  set_timezone.py  start.py  tasks_list.py
tg_bot/keyboards/inline/: __init__.py  callbackdatas.py  callbakbatas.py  cancel.py  cancel_and_back_keyboards.py  edit_task_keyboard.py  multilevel_menu.py  notify_keyborad.py  task_keyboard.py  tasks_list_keyboard.py
tg_bot/keyboards/reply/: main_menu.py  menu.py
tg_bot/middlewares/: scheduler.py
tg_bot/misc/: admin.py  bot_commands.py  cancel_handler.py  formatters.py  getters_data_db.py  insert_db.py  scheduler.py  scheduler_control.py
