[tool.poetry]
name = "aiogram_bot_template"
version = "0.1.0"
description = ""
authors = ["Dmitry <dz5011@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiogram = "^2.22.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asyncpg = "^0.26.0"
aioredis = "^2.0.1"
loguru = "^0.6.0"
isort = "^5.10.1"
black = "^22.8.0"
autoflake = "^1.5.3"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
APScheduler = "^3.9.1"
pymongo = "^4.2.0"
geopy = "^2.2.0"
timezonefinder = {extras = ["numba"], version = "^6.1.3"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
autoflake = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
